--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,22 @@ find_package(SDL2 CONFIG REQUIRED)
 
 add_executable(${PROJECT_NAME}
         config.h
-		delta_time.c
-		delta_time.h)
+        delta_time.c
+        delta_time.h
+        math/math.h
+        math/collisions.c
+        math/collisions.h
+        math/math.c)
 target_sources(${PROJECT_NAME} PRIVATE arkanoid.c)
 
 if (TARGET SDL2::SDL2)
-	target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2 SDL2::SDL2main)
-else()
-	target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
-	target_link_libraries(${PROJECT_NAME} PRIVATE SDL2 SDL2main m)
-endif()
-
+    target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2 SDL2::SDL2main)
+else ()
+    target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
+    target_link_libraries(${PROJECT_NAME} PRIVATE SDL2 SDL2main m)
+endif ()
 
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sprites.bmp
-	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 
