Added text blitting functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ find_package(SDL2 CONFIG REQUIRED)
 add_executable(${PROJECT_NAME}
         config.h
 		delta_time.c
-		delta_time.h)
+		delta_time.h
+		text.c
+		text.h)
 target_sources(${PROJECT_NAME} PRIVATE arkanoid.c)
 
 if (TARGET SDL2::SDL2)
@@ -21,5 +23,7 @@ endif()
 
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sprites.bmp
-	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)	
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Arkanoid_ascii.bmp
+	DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 
