--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ add_executable(${PROJECT_NAME}
         math/math.c
         math/math.h
         text.c
-        text.h)
+        text.h
+        textures.c
+        textures.h)
 target_sources(${PROJECT_NAME} PRIVATE arkanoid.c)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE m)
@@ -31,4 +33,5 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sprites.bmp
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Arkanoid_ascii.bmp
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
-
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Arkanoid_sprites.bmp
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
