--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ add_executable(${PROJECT_NAME}
         math/math.h
         text.c
         text.h
-        entity.h)
+        entity.h
+        entity.c)
 target_sources(${PROJECT_NAME} PRIVATE arkanoid.c)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE m)
